# Vulkan-Renderer

./: .gitignore  01-Hello-Triangle_8cpp.html  01-Hello-Triangle_8cpp.js  01-Hello-Triangle_8h_source.html  CMakeLists.txt  DemoApp_8h.html  DemoApp_8h_source.html  Doxyfile  File_8h.html  File_8h.js  File_8h_source.html  Logger_8h.html  Logger_8h_source.html  Maths_8h.html  Maths_8h.js  Maths_8h_source.html  Matrix_8h.html  Matrix_8h_source.html  Random_8h.html  Random_8h_source.html  ReadMe.md  Timer_8h.html  Timer_8h_source.html  Types_8h.html  Types_8h.js  Types_8h_source.html  VKR_8h.html  VKR_8h.js  VKR_8h_source.html  Vector2_8h.html  Vector2_8h.js  Vector2_8h_source.html  Vector3_8h.html  Vector3_8h.js  Vector3_8h_source.html  Vector4_8h.html  Vector4_8h.js  Vector4_8h_source.html  VkCommon_8h.html  VkCommon_8h.js  (+95 more)
.github/workflows/: doxygen_gh_pages.yml
Docs/: Doxyfile
Projects/: CMakeLists.txt
Projects/00-DEV/: CMakeLists.txt  main.cpp
Projects/00-DEV/Shaders/: cs.comp  fs.frag  grid.vert  vs.vert
Projects/01-Hello-Triangle/: 01-Hello-Triangle.cpp  CMakeLists.txt  LICENSE.md  ReadMe.md
Projects/Shared/: DemoApp.cpp  DemoApp.h
Renderer/: CMakeLists.txt
Renderer/include/: File.h  Logger.h  Maths.h  Random.h  Renderer.h  Timer.h  Types.h  VKR.h  Window.h
Renderer/include/Maths/: Matrix.h  Vector2.h  Vector3.h  Vector4.h
Renderer/include/Vulkan/: VkCommon.h  VkContext.h  VkHelpers.h  VkInit.h  VkPipelineBuilder.h  VkSwapchain.h
Renderer/src/: File.cpp  Logger.cpp  Random.cpp  Renderer.cpp  Timer.cpp  VKR.cpp  Window.cpp
Renderer/src/Vulkan/: VkCommon.cpp  VkContext.cpp  VkHelpers.cpp  VkInit.cpp  VkPipelineBuilder.cpp  VkSwapchain.cpp
Samples/: CMakeLists.txt
Samples/00-DEV/: CMakeLists.txt  main.cpp
Samples/00-DEV/Shaders/: grid.frag  no_transform.vert
Samples/01-Hello-Triangle/: 01-Hello-Triangle.cpp  01-Hello-Triangle.h  CMakeLists.txt  ReadMe.md  Resources.rc  main.cpp
Samples/01-Hello-Triangle/Shaders/: triangle.frag  triangle.vert
Samples/02-Mesh-Rendering/: CMakeLists.txt  ReadMe.md  main.cpp
Samples/02-Mesh-Rendering/Renderer/: Camera.h  GUI.cpp  GUI.h  Helpers.h  Importer.h  Renderer.cpp  Renderer.h  Scene.h
Samples/Shared/: CMakeLists.txt  DemoApp.cpp  DemoApp.h
VKR/: CMakeLists.txt
VKR/include/VKR/: File.h  Logger.h  Maths.h  Random.h  Timer.h  VKR.h  Window.h
VKR/include/VKR/Maths/: Matrix.h  Vector2.h  Vector3.h  Vector4.h
VKR/include/VKR/Vulkan/: VkCommon.h  VkContext.h  VkHelpers.h  VkImGui.h  VkInit.h  VkPipelineBuilder.h  VkSwapchain.h
VKR/src/: File.cpp  Logger.cpp  Random.cpp  Timer.cpp  VKR.cpp  Window.cpp
VKR/src/Vulkan/: VkCommon.cpp  VkContext.cpp  VkHelpers.cpp  VkImGui.cpp  VkInit.cpp  VkPipelineBuilder.cpp  VkSwapchain.cpp
search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  enums_0.js  files_0.js  files_1.js  files_2.js  files_3.js  files_4.js  files_5.js  files_6.js  files_7.js  files_8.js  functions_0.js  functions_1.js  (+17 more)
